--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -322,7 +322,8 @@
           </DataGrid.Columns>
           <DataGrid.ContextMenu>
             <ContextMenu>
-              <MenuItem Click="MenuItem_RemoveTrack" Header="Remove Track" />
+              <MenuItem Click="MenuItem_PlayTrack" Header="Play" />
+              <MenuItem Click="MenuItem_RemoveTrack" Header="Remove" />
             </ContextMenu>
           </DataGrid.ContextMenu>
         </DataGrid>
