--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -20,9 +20,12 @@
   <Window.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/CircularButton.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/TransparentButton.xaml" />
         <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/EqVerticalSlider.xaml" />
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
+
   </Window.Resources>
 
   <WindowChrome.WindowChrome>
@@ -31,10 +34,60 @@
 
   <Grid>
     <Grid.Resources>
+
       <Style x:Key="TextBlockFontStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="/Fonts/#Montserrat" />
         <Setter Property="Foreground" Value="{DynamicResource DefaultTextBrush}" />
       </Style>
+
+      <Style x:Key="CloseButton" TargetType="{x:Type Button}">
+        <Setter Property="Template">
+          <Setter.Value>
+            <ControlTemplate TargetType="{x:Type Button}">
+              <Grid Width="45" Height="30">
+                <Border x:Name="border" Background="Black" />
+                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+              </Grid>
+
+              <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                  <Setter TargetName="border" Property="Background">
+                    <Setter.Value>
+                      <SolidColorBrush Opacity="0.9" Color="Red" />
+                    </Setter.Value>
+                  </Setter>
+                </Trigger>
+              </ControlTemplate.Triggers>
+            </ControlTemplate>
+          </Setter.Value>
+        </Setter>
+      </Style>
+
+      <Style TargetType="TextBlock">
+        <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Foreground" Value="#FAFAFA" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+      </Style>
+
+      <Style TargetType="ComboBox">
+        <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Height" Value="27" />
+      </Style>
+
+      <Style TargetType="materialDesign:PackIcon">
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+      </Style>
+
+      <Style TargetType="Button" BasedOn="{StaticResource LinkerCircleButton}">
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Margin" Value="0,0,0,0" />
+      </Style>
+
     </Grid.Resources>
 
     <Grid.Background>
@@ -42,23 +95,48 @@
     </Grid.Background>
 
     <Grid.RowDefinitions>
-      <RowDefinition Height="90" />
+      <RowDefinition Height="55"/>
+      <RowDefinition Height="50" />
       <RowDefinition />
       <RowDefinition Height="20" />
       <RowDefinition Height="50" />
     </Grid.RowDefinitions>
 
-    <userControls:TitlebarButtons x:Name="TitlebarButtons" Panel.ZIndex="1" />
-
     <Grid Grid.Row="0">
-      <Grid.Resources>
-        <Style TargetType="Button">
-          <Setter Property="Background" Value="Transparent" />
-          <Setter Property="Height" Value="25" />
-          <Setter Property="Width" Value="25" />
-        </Style>
-      </Grid.Resources>
+      <TextBlock
+        Margin="12,2,0,0"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Top"
+        d:Foreground=" White"
+        FontSize="22"
+        FontWeight="Light"
+        Foreground="{DynamicResource TitleBarForegroundBrush}"
+        Text="Equalizer" />
 
+      <StackPanel
+        HorizontalAlignment="Right"
+        VerticalAlignment="Top"
+        Background="{DynamicResource TitleBarBackgroundBrush}"
+        Orientation="Horizontal"
+        WindowChrome.IsHitTestVisibleInChrome="True">
+
+        <Button
+          Name="CloseButton"
+          Click="CloseButton_Click"
+          MouseEnter="ButtonMouseEnter"
+          MouseLeave="ButtonMouseLeave"
+          Style="{DynamicResource CloseButton}">
+          <Image
+            Name="CloseButtonImage"
+            Width="10"
+            Height="10"
+            Opacity="0.6"
+            Source="/Images/close.png" />
+        </Button>
+      </StackPanel>
+    </Grid>
+
+    <Grid Grid.Row="1">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="130" />
@@ -74,7 +152,6 @@
         materialDesign:HintAssist.Hint="Default"
         Background="Transparent"
         BorderBrush="{DynamicResource ControlPrimaryAccentBrush}"
-        FontFamily="/Fonts/#Montserrat"
         Foreground="#BDBDBD"
         IsTextSearchEnabled="false"
         SelectionChanged="Profiles_SelectionChanged"
@@ -86,10 +163,10 @@
 
       <Grid x:Name="ControlButtons" Grid.Column="2">
         <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="30" />
-          <ColumnDefinition Width="30" />
-          <ColumnDefinition Width="30" />
-          <ColumnDefinition Width="30" />
+          <ColumnDefinition Width="36" />
+          <ColumnDefinition Width="36" />
+          <ColumnDefinition Width="36" />
+          <ColumnDefinition Width="35" />
         </Grid.ColumnDefinitions>
 
         <Button
@@ -133,6 +210,7 @@
               KeyDown="RenamePopupTextBox_KeyDown" />
           </Border>
         </Popup>
+
         <Button
           Name="RenameButton"
           Grid.Column="2"
@@ -143,7 +221,6 @@
 
         <Popup
           x:Name="NamePopup"
-          Grid.Column="2"
           Width="150"
           HorizontalOffset="0"
           Placement="Bottom"
@@ -160,6 +237,7 @@
               KeyDown="NamePopupTextBox_KeyDown" />
           </Border>
         </Popup>
+
         <Button
           Name="NameButton"
           Grid.Column="3"
@@ -171,7 +249,7 @@
       </Grid>
     </Grid>
 
-    <Grid Grid.Row="1">
+    <Grid Grid.Row="2">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Right" />
@@ -210,7 +288,7 @@
 
     </Grid>
 
-    <Grid Grid.Row="2" Margin="30,0,30,0">
+    <Grid Grid.Row="3" Margin="30,0,30,0">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Center" />
@@ -239,7 +317,7 @@
       <TextBlock Grid.Column="7" Text="10240 Hz" />
     </Grid>
 
-    <Grid Grid.Row="3">
+    <Grid Grid.Row="4">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="120" />
@@ -248,6 +326,7 @@
 
       <Button
         Name="StartStopButton"
+        Style="{DynamicResource TransparentButton}"
         Grid.Column="1"
         Width="100"
         Height="30"
