--- a/LinkerPlayer/Styles/RectangleButton.xaml
+++ b/LinkerPlayer/Styles/RectangleButton.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Style x:Key="LinkerCircleButton.FocusVisualStyle">
+  <Style x:Key="LinkerRectangleButton.FocusVisualStyle">
     <Setter Property="Control.Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type Control}">
-          <Ellipse
+          <Rectangle
             Margin="3"
             SnapsToDevicePixels="True"
             Stroke="white"
@@ -16,11 +16,11 @@
     </Setter>
   </Style>
 
-  <Style x:Key="LinkerCircleButton" TargetType="{x:Type ButtonBase}">
+  <Style x:Key="LinkerRectangleButton" TargetType="{x:Type ButtonBase}">
     <Setter Property="Background" Value="Transparent" />
-    <Setter Property="BorderBrush" Value="{DynamicResource PlayerControlButtonBorderBrush}" />
+    <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
     <Setter Property="BorderThickness" Value="14" />
-    <!--<Setter Property="FocusVisualStyle" Value="{StaticResource LinkerCircleButton.FocusVisualStyle}" />-->
+    <!--<Setter Property="FocusVisualStyle" Value="{StaticResource LinkerRectangleButton.FocusVisualStyle}" />-->
     <Setter Property="HorizontalContentAlignment" Value="Center" />
     <Setter Property="VerticalContentAlignment" Value="Center" />
     <Setter Property="Padding" Value="1" />
@@ -29,16 +29,16 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ButtonBase}">
           <Grid>
-            <Ellipse Fill="{TemplateBinding Background}" StrokeThickness="0" />
-            <Ellipse
-              x:Name="EllipseBg"
+            <Rectangle Fill="{TemplateBinding Background}" StrokeThickness="0" />
+            <Rectangle
+              x:Name="RectangleBg"
               Fill="white"
               Opacity="0"
               StrokeThickness="0" />
-            <Ellipse
-              x:Name="Ellipse"
+            <Rectangle
+              x:Name="Rectangle"
               Stroke="{TemplateBinding BorderBrush}"
-              StrokeThickness="2" />
+              StrokeThickness="1" />
             <ContentPresenter
               x:Name="IconContent"
               Margin="{TemplateBinding Padding}"
@@ -52,7 +52,7 @@
                 <BeginStoryboard>
                   <Storyboard>
                     <DoubleAnimation
-                      Storyboard.TargetName="EllipseBg"
+                      Storyboard.TargetName="RectangleBg"
                       Storyboard.TargetProperty="Opacity"
                       From="0"
                       To="0.3"
@@ -65,7 +65,7 @@
                 <BeginStoryboard>
                   <Storyboard>
                     <DoubleAnimation
-                      Storyboard.TargetName="EllipseBg"
+                      Storyboard.TargetName="RectangleBg"
                       Storyboard.TargetProperty="Opacity"
                       To="0"
                       Duration="0:0:0.5" />
@@ -74,16 +74,16 @@
               </Trigger.ExitActions>
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-              <Setter TargetName="Ellipse" Property="Opacity" Value="1" />
+              <Setter TargetName="Rectangle" Property="Opacity" Value="1" />
             </Trigger>
             <Trigger Property="IsMouseOver" Value="False">
-              <Setter TargetName="Ellipse" Property="Opacity" Value="0.7" />
+              <Setter TargetName="Rectangle" Property="Opacity" Value="0.7" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="True">
-              <Setter TargetName="Ellipse" Property="Opacity" Value="0.7" />
+              <Setter TargetName="Rectangle" Property="Opacity" Value="0.7" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-              <Setter TargetName="Ellipse" Property="Opacity" Value="0.3" />
+              <Setter TargetName="Rectangle" Property="Opacity" Value="0.3" />
             </Trigger>
           </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -94,18 +94,20 @@
       <Trigger Property="IsMouseOver" Value="True">
         <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentBrush}" />
       </Trigger>
+      <Trigger Property="IsMouseOver" Value="False">
+        <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
+      </Trigger>
     </Style.Triggers>
 
   </Style>
 
-
   <Style
-    x:Key="LinkerCircleToggleButton"
-    BasedOn="{StaticResource LinkerCircleButton}"
+    x:Key="LinkerRectangleToggleButton"
+    BasedOn="{StaticResource LinkerRectangleButton}"
     TargetType="{x:Type ToggleButton}">
     <Style.Triggers>
       <Trigger Property="ToggleButton.IsChecked" Value="True">
-        <Setter Property="Foreground" Value="{DynamicResource ControlAccentBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlForegroundBrush}" />
       </Trigger>
       <Trigger Property="IsEnabled" Value="False">
         <Setter Property="Foreground" Value="Gray" />
