--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -8,8 +8,11 @@
 
   <Color x:Key="ChildWindowBackgroundColor">#AAAAAA</Color>
 
-  <Color x:Key="ControlPrimaryAccentColor">#673AB7</Color>
-  <Color x:Key="ControlSecondaryAccentColor">#3B2A5A</Color>
+  <Color x:Key="ControlAccentColor">#673AB7</Color>
+  <Color x:Key="ControlForegroundColor">White</Color>
+  <Color x:Key="ControlBackgroundColor">Transparent</Color>
+  <Color x:Key="ControlBorderColor">White</Color>
+
   <Color x:Key="ControlDisabledColor">Gray</Color>
 
   <Color x:Key="DefaultTextColor">Black</Color>
