--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -8,8 +8,10 @@
 
   <Color x:Key="ChildWindowBackgroundColor">#CCCCCC</Color>
 
-  <Color x:Key="ControlPrimaryAccentColor">#673AB7</Color>
-  <Color x:Key="ControlSecondaryAccentColor">#3B2A5A</Color>
+  <Color x:Key="ControlAccentColor">#673AB7</Color>
+  <Color x:Key="ControlForegroundColor">Black</Color>
+  <Color x:Key="ControlBackgroundColor">Transparent</Color>
+  <Color x:Key="ControlBorderColor">Black</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
 
   <Color x:Key="DefaultTextColor">Black</Color>
