--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -3,8 +3,8 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   d:DesignHeight="40"
   d:DesignWidth="800"
   mc:Ignorable="d">
@@ -84,14 +84,17 @@
         Style="{DynamicResource MaximizeMinimizeButton}"
         ToolTip="Settings">
         <Image
-          Margin="0, 0, 14, 0"
           Width="14"
           Height="14"
+          Margin="0,0,14,0"
           Opacity="0.6"
           Source="/Images/settings.png" />
       </Button>
 
-      <Rectangle Width="1" Height="20" Fill="Azure"/>
+      <Rectangle
+        Width="1"
+        Height="20"
+        Fill="Azure" />
 
       <Button
         Name="MinimizeButton"
