--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -3,9 +3,9 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
   Title="Equalizer"
   Width="500"
   Height="351"
@@ -21,7 +21,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/CircularButton.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/TransparentButton.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/RectangleButton.xaml" />
         <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/EqVerticalSlider.xaml" />
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
@@ -82,20 +82,24 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
       </Style>
 
-      <Style TargetType="Button" BasedOn="{StaticResource LinkerCircleButton}">
-        <Setter Property="Height" Value="30"/>
-        <Setter Property="Width" Value="30"/>
+      <Style BasedOn="{StaticResource LinkerCircleButton}" TargetType="Button">
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Width" Value="30" />
         <Setter Property="Margin" Value="0,0,0,0" />
       </Style>
 
     </Grid.Resources>
 
     <Grid.Background>
-      <SolidColorBrush Color="{DynamicResource ChildWindowBackgroundColor}" />
+      <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="{DynamicResource MainWindowGradientStartColor}" />
+        <GradientStop Offset=".1" Color="{DynamicResource MainWindowGradientStartColor}" />
+        <GradientStop Offset="1" Color="{DynamicResource MainWindowGradientEndColor}" />
+      </LinearGradientBrush>
     </Grid.Background>
 
     <Grid.RowDefinitions>
-      <RowDefinition Height="55"/>
+      <RowDefinition Height="30" />
       <RowDefinition Height="50" />
       <RowDefinition />
       <RowDefinition Height="20" />
@@ -143,22 +147,42 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
+      <!--<StackPanel
+        Grid.Column="0"
+        Margin="0,4,0,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Orientation="Horizontal">-->
+        <mah:ToggleSwitch
+          Name="EqSwitch"
+          Grid.Column="0"
+          MinWidth="80"
+          BorderBrush="red"
+          Foreground="White"
+          Background="orange"
+          BorderThickness="1"
+          HorizontalAlignment="Center"
+          IsOn="{Binding Equalizer.IsEnabled}"
+          OffContent="Off"
+          OnContent="On"
+          Toggled="ToggleSwitch_Toggled" />
+      <!--</StackPanel>-->
+
       <ComboBox
         Name="Profiles"
         Grid.Column="1"
         Width="120"
         Height="25"
-        Padding="5"
         materialDesign:HintAssist.Hint="Default"
         Background="Transparent"
-        BorderBrush="{DynamicResource ControlPrimaryAccentBrush}"
-        Foreground="#BDBDBD"
+        BorderBrush="{DynamicResource ControlBorderBrush}"
+        Foreground="Black"
         IsTextSearchEnabled="false"
         SelectionChanged="Profiles_SelectionChanged"
         ToolTip="Profiles">
-        <ComboBox.Resources>
+        <!--<ComboBox.Resources>
           <SolidColorBrush x:Key="MaterialDesignPaper" Color="#212128" />
-        </ComboBox.Resources>
+        </ComboBox.Resources>-->
       </ComboBox>
 
       <Grid x:Name="ControlButtons" Grid.Column="2">
@@ -272,7 +296,7 @@
         <TextBlock
           Grid.Row="0"
           VerticalAlignment="Top"
-          Text="30 dB" />
+          Text="12 dB" />
         <TextBlock
           Grid.Row="1"
           VerticalAlignment="Center"
@@ -280,7 +304,7 @@
         <TextBlock
           Grid.Row="2"
           VerticalAlignment="Bottom"
-          Text="-30 dB" />
+          Text="-12 dB" />
       </Grid>
 
       <!--  EQ Sliders - Initialized in Window_Loaded  -->
@@ -297,6 +321,9 @@
       </Grid.Resources>
 
       <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="25" />
+        <ColumnDefinition />
+        <ColumnDefinition />
         <ColumnDefinition />
         <ColumnDefinition />
         <ColumnDefinition />
@@ -307,17 +334,52 @@
         <ColumnDefinition />
       </Grid.ColumnDefinitions>
 
-      <TextBlock Grid.Column="0" Text="40 Hz" />
-      <TextBlock Grid.Column="1" Text="80 Hz" />
-      <TextBlock Grid.Column="2" Text="320 Hz" />
-      <TextBlock Grid.Column="3" Text="640 Hz" />
-      <TextBlock Grid.Column="4" Text="1280 Hz" />
-      <TextBlock Grid.Column="5" Text="2560 Hz" />
-      <TextBlock Grid.Column="6" Text="5120 Hz" />
-      <TextBlock Grid.Column="7" Text="10240 Hz" />
+      <TextBlock
+        Grid.Column="1"
+        HorizontalAlignment="Center"
+        Text="32" />
+      <TextBlock
+        Grid.Column="2"
+        HorizontalAlignment="Center"
+        Text="64" />
+      <TextBlock
+        Grid.Column="3"
+        HorizontalAlignment="Center"
+        Text="125" />
+      <TextBlock
+        Grid.Column="4"
+        HorizontalAlignment="Center"
+        Text="250" />
+      <TextBlock
+        Grid.Column="5"
+        HorizontalAlignment="Center"
+        Text="500" />
+      <TextBlock
+        Grid.Column="6"
+        HorizontalAlignment="Center"
+        Text="1K" />
+      <TextBlock
+        Grid.Column="7"
+        HorizontalAlignment="Center"
+        Text="2K" />
+      <TextBlock
+        Grid.Column="8"
+        HorizontalAlignment="Center"
+        Text="4K" />
+      <TextBlock
+        Grid.Column="9"
+        HorizontalAlignment="Center"
+        Text="8K" />
+      <TextBlock
+        Grid.Column="10"
+        HorizontalAlignment="Center"
+        Text="16K" />
     </Grid>
 
-    <Grid Grid.Row="4">
+    <Grid
+      Grid.Row="4"
+      VerticalAlignment="Bottom"
+      Background="{DynamicResource MainWindowGradientStartBrush}">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="120" />
@@ -325,6 +387,20 @@
       </Grid.ColumnDefinitions>
 
       <Button
+        Name="StartStopText"
+        Grid.Column="1"
+        Width="100"
+        Height="30"
+        Margin="0,7,0,7"
+        HorizontalAlignment="Center"
+        Click="StartStopButton_Click"
+        Content="Start"
+        FontSize="18"
+        FontWeight="Normal"
+        Foreground="{DynamicResource ControlForegroundBrush}"
+        Style="{StaticResource LinkerRectangleButton}" />
+
+      <!--<Button
         Name="StartStopButton"
         Style="{DynamicResource TransparentButton}"
         Grid.Column="1"
@@ -338,9 +414,9 @@
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
           FontFamily="/Fonts/#Montserrat"
-          Foreground="{DynamicResource ControlPrimaryAccentBrush}"
+          Foreground="{DynamicResource ControlAccentBrush}"
           Text="Start" />
-      </Button>
+      </Button>-->
 
       <Button
         Name="ReloadButton"
